fix: toggle overview map button not clickable fix: attributions button overlapped toggle overview maps button when map was collapsed

--- a/modules/controls/style.less
+++ b/modules/controls/style.less
@@ -14,6 +14,9 @@
 /***** OrientationControl -> geolocation_marker *****/
 .controls-row-right {
     position: relative;
+    /*ACHTUNG*/
+    margin-right: 12px;
+    min-height:40px;
 }
 .controls-row-left {
     position: relative;
@@ -72,13 +75,11 @@
     margin-right: 34px;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.176);
     border: 1px solid rgb(229, 229, 229);
-    margin-bottom: 20px;
 }
 .attributions-button {
     position: absolute;
     right: 0;
     bottom: 0;
-    margin-bottom: 20px;
 }
 .attributions-view {
     dt {
@@ -134,8 +135,11 @@
 }
 .control-view-bottom-right {
     position: absolute;
+    /*ACHTUNG*/
     right: 6px;
     bottom: 0;
+    right: 3px;
+    bottom: 30px;
     .row.controls-row-right {
         margin:0;
     }
